--- a/elf/Makefile
+++ b/elf/Makefile
@@ -4,3 +4,5 @@ all:
 	gcc -g -Wall elfparser.c -o elfparser
 	gcc -g -Wall test.c -o test
 	gcc -g -Wall tracer.c -o tracer
+	gcc -g -Wall tracer2.c -o tracer2
+	gcc -g -Wall test2.c -o test2
